// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package consensus;

import "validator_change.proto";

message ConsensusMsg {
  oneof message {
    Proposal proposal = 1;
    VoteMsg vote_msg = 2;
    RequestBlock request_block = 3;
    RespondBlock respond_block = 4;
    SyncInfo sync_info = 5;
    types.ValidatorChangeEventWithProof epoch_change = 6;
    RequestEpoch request_epoch = 7;
    Block new_block = 8;
    PowSyncInfoReq pow_sync_info_req = 9;
    PowSyncInfoResp pow_sync_info_resp = 10;
    PowRequestBlock pow_request_block = 11;
  }
}

message Proposal {
  bytes bytes = 1;
}

message SyncInfo {
  bytes bytes = 1;
}

message Block {
  bytes bytes = 1;
}

message VoteMsg {
  bytes bytes = 1;
}

message VoteProposal {
  bytes bytes = 1;
}

message RequestBlock {
  bytes bytes = 1;
}

message PowRequestBlock {
    bytes bytes = 1;
}

message RespondBlock {
  bytes bytes = 1;
}

message RequestEpoch {
  bytes bytes = 1;
}

message BlockPayloadExt {
    bytes bytes = 1;
}

message PowSyncInfoReq {
    bytes bytes = 1;
}

message PowSyncInfoResp {
    bytes bytes = 1;
}

message PowSyncBlock {
    bytes bytes = 1;
}